--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
     <!-- Your own stylesheet -->
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
+  
+<div class="topnav">
+  <a class="active" href="#home">Home</a>
+  <a href="#news">News</a>
+  <a href="#contact">Contact</a>
+  <a href="#about">About</a>
+</div>
+
   <body>
     <div class="container d-flex align-items-center h-100">
       <div class="row">
